# headfirst_OOAD_in_python

./: .gitignore  Makefile  README.md  pyproject.toml
src/ooad/chapter_01/take_01/: guitar.py  inventory.py
src/ooad/chapter_01/take_02/: guitar.py  inventory.py
src/ooad/chapter_01/take_03/: guitar.py  inventory.py
src/ooad/chapter_01/take_04/: enums.py  guitar.py  guitar_spec.py  inventory.py
src/ooad/chapter_01/take_05/: guitar.py  guitar_spec.py  inventory.py
src/ooad/chapter_02/take_01/: remote.py
src/ooad/chapter_02/take_02/: dog_door.py  remote.py
src/ooad/chapter_03/take_01/: bark_recognizer.py  remote.py
src/ooad/chapter_03/take_02/: bark_recognizer.py  dog_door.py  remote.py
src/ooad/chapter_04/take_01/: bark_recognizer.py  dog_door.py  remote.py
src/ooad/chapter_04/take_02/: bark.py  bark_recognizer.py  dog_door.py  remote.py
src/ooad/chapter_04/take_03/: bark_recognizer.py  dog_door.py  remote.py
src/ooad/chapter_05/part_01/: enums.py  guitar.py  guitar_spec.py  instrument.py  instrument_spec.py  inventory.py  mandolin.py  mandolin_spec.py
src/ooad/chapter_05/part_02/: enums.py  instrument.py  instrument_spec.py  inventory.py
src/ooad/chapter_06/units/: unit.py
src/ooad/chapter_07/board/: board.py  tile.py
src/ooad/chapter_07/units/: unit.py
src/ooad/chapter_08/board/: board.py  board3d.py  tile.py
src/ooad/chapter_08/units/: unit.py
src/ooad/chapter_10/loader/: subway_loader.py
src/ooad/chapter_10/printer/: subway_printer.py
src/ooad/chapter_10/subway/: connection.py  station.py  subway.py
tests/chapter_01/: test_find_guitar_take_01.py  test_find_guitar_take_02.py  test_find_guitar_take_03.py  test_find_guitar_take_04.py  test_find_guitar_take_05.py
tests/chapter_02/: test_dog_door_take_01.py  test_dog_door_take_02.py
tests/chapter_03/: test_bark_recognizer_take_01.py  test_bark_recognizer_take_02.py
tests/chapter_04/: test_bark_aware_recognizer_take_01.py  test_bark_aware_recognizer_take_02.py  test_bark_aware_recognizer_take_03.py
tests/chapter_05/: test_find_instrument_part_01.py  test_find_instrument_part_02.py
tests/chapter_09/: test_unit_group_part_03.py  test_unit_part_01.py  test_unit_part_02.py
tests/chapter_10/: ObjectvilleSubway.txt  test_subway_loader.py  test_subway_route_planner.py
(+13 files in other folders)
